# serializer version: 1
# name: test_create_app
  dict({
    'app_id': '8d3b1c1a-2f0d-4b0a-9c1e-9f1234567890',
    'client_id': '0d1e2f3a-4b5c-6d7e-8f9a-0b1c2d3e4f5a',
    'client_secret': '9f8e7d6c-5b4a-3c2d-1e0f-a9b8c7d6e5f4',
  })
# ---
# name: test_list_apps
  list([
    dict({
      'app_id': '8d3b1c1a-2f0d-4b0a-9c1e-9f1234567890',
      'app_name': 'homeassistant-abc123',
    }),
    dict({
      'app_id': '1a2b3c4d-5e6f-7a8b-9c0d-1e2f3a4b5c6d',
      'app_name': 'homeassistant-def456',
    }),
  ])
# ---
# name: test_regenerate_oauth
  dict({
    'client_id': '0d1e2f3a-4b5c-6d7e-8f9a-0b1c2d3e4f5a',
    'client_secret': '9f8e7d6c-5b4a-3c2d-1e0f-a9b8c7d6e5f4',
  })
# ---
